More demo/example stuff

--- a/apps/examples/index.html
+++ b/apps/examples/index.html
@@ -319,7 +319,7 @@
       // The server maps /dist/* requests to the actual dist/ directory
       // For development with bun serve: bun examples/browser.ts
       // For production, adjust path as needed or use a CDN
-      import { createWebpEncoder, createResizer } from '/dist/index.js';
+      import { createWebpEncoder, createResizer } from './dist/index.js';
 
       // DOM elements
       const fileInput = document.getElementById('fileInput');
