--- a/apps/examples/index.html
+++ b/apps/examples/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@squoosh-lite/core - Browser Demo</title>
+    <title>@squoosh-kit/core - Browser Demo</title>
     <style>
       body {
         font-family:
@@ -204,7 +204,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>@squoosh-lite/core - Browser Demo</h1>
+      <h1>@squoosh-kit/core - Browser Demo</h1>
       <p>Demonstrates WebP encoding and image resizing in the browser</p>
     </div>
 
