--- a/apps/example/src/index.html
+++ b/apps/example/src/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <title>Image Magic - Squoosh Lite Demo</title>
-    <meta name="description" content="Transform your images with our friendly processing assistant. Resize, convert to WebP, and optimize your images with ease." />
+    <meta
+      name="description"
+      content="Transform your images with our friendly processing assistant. Resize, convert to WebP, and optimize your images with ease."
+    />
   </head>
   <body>
     <div id="root"></div>
